[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "dispatch_daemon"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
log-panics = "2.1.0"
notify = "6.1.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.126"
tokio = { version = "1.39.3", features = ["macros", "signal", "rt-multi-thread", "process", "time"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows = { version = "0.58.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"] }
