[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "dispatch_daemon"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
log-panics = "2.1.0"
notify = "6.1.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.126"
tokio = { version = "1.39.3", features = ["net", "time", "macros", "io-util", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
